<resources>
    <string name="app_name">සාමාන්‍ය පෙළ ගණිතය</string>
    <string name="past_papers">miq.sh jsNd.\n m%IaK m;%</string>
    <string name="model_papers">wkqudk m%IaK m;%</string>
    <string name="school_book">mdi,A fmd;A</string>
    <string name="school_papers">mdi,A m%IaK m;%</string>
    <string name="daily">w,q;Ajk m%IAK</string>
    <string name="infor">kj;u mKsõX</string>
</resources>
