<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradianthome"
    tools:context=".HomePageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">


        <LinearLayout
            android:id="@+id/linerHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiantlinear">

                <ImageView
                    android:id="@+id/iconHome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon"/>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line1"
            android:layout_below="@id/linerHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/crdmathesPastPapers"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiantcard"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgPastPapers"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/papertwo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imgPastPapers"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/fnsamanali"
                        android:text="@string/past_papers"
                        android:textColor="#000"
                        android:textSize="20dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/crdmathesModle"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiantcard"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgModelPapers"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/paper"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/model_papers"
                        android:fontFamily="@font/fnsamanali"
                        android:textSize="20dp"
                        android:textColor="#000"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/imgModelPapers"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_below="@id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/crdmathesLesson"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiantcard">

                    <ImageView
                        android:id="@+id/imgMathesLessons"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/book"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/school_book"
                        android:fontFamily="@font/fnsamanali"
                        android:textSize="25dp"
                        android:layout_centerInParent="true"
                        android:layout_below="@id/imgMathesLessons"
                        android:textColor="#000"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/crdmathesSchoolPpr"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiantcard">

                    <ImageView
                        android:id="@+id/imgMathesSchoolPpr"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/paper"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/school_papers"
                        android:fontFamily="@font/fnsamanali"
                        android:textSize="25dp"
                        android:layout_centerInParent="true"
                        android:layout_below="@id/imgMathesSchoolPpr"
                        android:textColor="#000"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/line3"
            android:layout_below="@id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/crddailyUpdateQA"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiantcard">

                    <ImageView
                        android:id="@+id/imgMathesUpdateQA"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/question"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daily"
                        android:textSize="20dp"
                        android:fontFamily="@font/fnsamanali"
                        android:layout_centerInParent="true"
                        android:layout_below="@id/imgMathesUpdateQA"
                        android:textColor="#000"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/crdinformation"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradiantcard">

                    <ImageView
                        android:id="@+id/imgMathesInformation"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/info"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/infor"
                        android:fontFamily="@font/fnsamanali"
                        android:textSize="20dp"
                        android:layout_centerInParent="true"
                        android:layout_below="@id/imgMathesInformation"
                        android:textColor="#000"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>